<?xml version="1.0" encoding="UTF-8"?><resources><string name="androidAppModule5string0">androidAppModule5string0</string>
<string name="androidAppModule5string1">androidAppModule5string1</string>
<string name="androidAppModule5string2">androidAppModule5string2</string>
<string name="androidAppModule5string3">androidAppModule5string3</string>
<string name="androidAppModule5string4">androidAppModule5string4</string>
<string name="androidAppModule5string5">androidAppModule5string5</string>
<string name="androidAppModule5string6">androidAppModule5string6</string>
<string name="androidAppModule5string7">androidAppModule5string7</string>
<string name="androidAppModule5string8">androidAppModule5string8</string>
<string name="androidAppModule5string9">androidAppModule5string9</string>
<string name="androidAppModule5string10">androidAppModule5string10</string>
<string name="androidAppModule5string11">androidAppModule5string11</string>
<string name="androidAppModule5string12">androidAppModule5string12</string>
<string name="androidAppModule5string13">androidAppModule5string13</string>
<string name="androidAppModule5string14">androidAppModule5string14</string>
<string name="androidAppModule5string15">androidAppModule5string15</string>
<string name="androidAppModule5string16">androidAppModule5string16</string>
<string name="androidAppModule5string17">androidAppModule5string17</string>
<string name="androidAppModule5string18">androidAppModule5string18</string>
<string name="androidAppModule5string19">androidAppModule5string19</string>
<string name="androidAppModule5string20">androidAppModule5string20</string>
<string name="androidAppModule5string21">androidAppModule5string21</string>
<string name="androidAppModule5string22">androidAppModule5string22</string>
<string name="androidAppModule5string23">androidAppModule5string23</string>
<string name="androidAppModule5string24">androidAppModule5string24</string>
<string name="androidAppModule5string25">androidAppModule5string25</string>
<string name="androidAppModule5string26">androidAppModule5string26</string>
<string name="androidAppModule5string27">androidAppModule5string27</string>
<string name="androidAppModule5string28">androidAppModule5string28</string>
<string name="androidAppModule5string29">androidAppModule5string29</string>
<string name="androidAppModule5string30">androidAppModule5string30</string>
<string name="androidAppModule5string31">androidAppModule5string31</string>
<string name="androidAppModule5string32">androidAppModule5string32</string>
<string name="androidAppModule5string33">androidAppModule5string33</string>
<string name="androidAppModule5string34">androidAppModule5string34</string>
<string name="androidAppModule5string35">androidAppModule5string35</string>
<string name="androidAppModule5string36">androidAppModule5string36</string>
<string name="androidAppModule5string37">androidAppModule5string37</string>
<string name="androidAppModule5string38">androidAppModule5string38</string>
<string name="androidAppModule5string39">androidAppModule5string39</string>
<string name="androidAppModule5string40">androidAppModule5string40</string>
<string name="androidAppModule5string41">androidAppModule5string41</string>
<string name="androidAppModule5string42">androidAppModule5string42</string>
<string name="androidAppModule5string43">androidAppModule5string43</string>
<string name="androidAppModule5string44">androidAppModule5string44</string>
<string name="androidAppModule5string45">androidAppModule5string45</string>
<string name="androidAppModule5string46">androidAppModule5string46</string>
<string name="androidAppModule5string47">androidAppModule5string47</string>
<string name="androidAppModule5string48">androidAppModule5string48</string>
<string name="androidAppModule5string49">androidAppModule5string49</string>
<string name="androidAppModule5string50">androidAppModule5string50</string>
<string name="androidAppModule5string51">androidAppModule5string51</string>
<string name="androidAppModule5string52">androidAppModule5string52</string>
<string name="androidAppModule5string53">androidAppModule5string53</string>
<string name="androidAppModule5string54">androidAppModule5string54</string>
<string name="androidAppModule5string55">androidAppModule5string55</string>
<string name="androidAppModule5string56">androidAppModule5string56</string>
<string name="androidAppModule5string57">androidAppModule5string57</string>
<string name="androidAppModule5string58">androidAppModule5string58</string>
<string name="androidAppModule5string59">androidAppModule5string59</string>
<string name="androidAppModule5string60">androidAppModule5string60</string>
<string name="androidAppModule5string61">androidAppModule5string61</string>
<string name="androidAppModule5string62">androidAppModule5string62</string>
<string name="androidAppModule5string63">androidAppModule5string63</string>
<string name="androidAppModule5string64">androidAppModule5string64</string>
<string name="androidAppModule5string65">androidAppModule5string65</string>
<string name="androidAppModule5string66">androidAppModule5string66</string>
<string name="androidAppModule5string67">androidAppModule5string67</string>
<string name="androidAppModule5string68">androidAppModule5string68</string>
<string name="androidAppModule5string69">androidAppModule5string69</string>
<string name="androidAppModule5string70">androidAppModule5string70</string>
<string name="androidAppModule5string71">androidAppModule5string71</string>
<string name="androidAppModule5string72">androidAppModule5string72</string>
<string name="androidAppModule5string73">androidAppModule5string73</string>
<string name="androidAppModule5string74">androidAppModule5string74</string>
<string name="androidAppModule5string75">androidAppModule5string75</string>
<string name="androidAppModule5string76">androidAppModule5string76</string>
<string name="androidAppModule5string77">androidAppModule5string77</string>
<string name="androidAppModule5string78">androidAppModule5string78</string>
<string name="androidAppModule5string79">androidAppModule5string79</string>
<string name="androidAppModule5string80">androidAppModule5string80</string>
<string name="androidAppModule5string81">androidAppModule5string81</string>
<string name="androidAppModule5string82">androidAppModule5string82</string>
<string name="androidAppModule5string83">androidAppModule5string83</string>
<string name="androidAppModule5string84">androidAppModule5string84</string>
<string name="androidAppModule5string85">androidAppModule5string85</string>
<string name="androidAppModule5string86">androidAppModule5string86</string>
<string name="androidAppModule5string87">androidAppModule5string87</string>
<string name="androidAppModule5string88">androidAppModule5string88</string>
<string name="androidAppModule5string89">androidAppModule5string89</string>
<string name="androidAppModule5string90">androidAppModule5string90</string>
<string name="androidAppModule5string91">androidAppModule5string91</string>
<string name="androidAppModule5string92">androidAppModule5string92</string>
<string name="androidAppModule5string93">androidAppModule5string93</string>
<string name="androidAppModule5string94">androidAppModule5string94</string>
<string name="androidAppModule5string95">androidAppModule5string95</string>
<string name="androidAppModule5string96">androidAppModule5string96</string>
<string name="androidAppModule5string97">androidAppModule5string97</string>
<string name="androidAppModule5string98">androidAppModule5string98</string>
<string name="androidAppModule5string99">androidAppModule5string99</string>
<string name="androidAppModule5string100">androidAppModule5string100</string>
<string name="androidAppModule5string101">androidAppModule5string101</string>
</resources>